# ORMIR_XCT

./: .flake8  README.md  environment.yml  paper.bib  paper.md  requirements.txt  setup.cfg
.github/workflows/: draft-pdf.yml
autocontour/: autocontour.py  autocontour_gobj.py
bone_mineral_density/: batch_bmd_masked.py  bmd.py  bmd_masked.py
examples/: Automatic_Contour_Example.ipynb  Bone_Microarchitecture.ipynb  Bone_Mineral_Density.ipynb  Bone_Mineral_Density_Example.ipynb  Laplace_Hamming_Filter.ipynb  Trabecular Bone Microarchitecture.ipynb  Trabecular_Segmentation_Example.ipynb  finger_joint_comparison.ipynb  hildebrand_notebook.ipynb  jsw_nathan.ipynb  jsw_notebook.ipynb  thickness_of_shapes.ipynb
examples/.ipynb_checkpoints/: jsw_notebook-checkpoint.ipynb
joint_space_analysis/: jsw_main.py  jsw_morphometry.py
manuscript/: paper.bib  paper.md
manuscript/notebooks/: JOSS_manuscript_Figure1.ipynb  JOSS_manuscript_Figure2_3.ipynb  JOSS_manuscript_Table1_2.ipynb  LinearRegression.py  hausdorff.py  joss_plots.py
ormir_xct/autocontour/: AutocontourKnee.py  autocontour.py  autocontour_gobj.py
ormir_xct/batch/: batch_auto_contour_eval.py  batch_autocontour.py  batch_autocontour_eval.sh  batch_bmd_eval.sh  batch_bmd_masked.py  batch_full_joint_seg_eval.sh  batch_ipl_seg.py  batch_ipl_seg_eval.py  batch_ipl_seg_eval.sh  batch_jsw.sh  (+3 more)
segmentation/: ipl_seg.py
stack_registration/: three_stack_reg.py  two_stack_reg.py
util/: __init__.py  batch_file_converter.py  dt_morphometry.py  file_converter.py  file_reader.py  image_to_dicom.py  scanco_rescale.py
(+89 files in other folders)
