[metadata]
name = ormir_xct
author = Michael T. Kuczynski
author-email = mkuczyns@ucalgary.ca
summary = Scripts HR-pQCT for joint space and bone microarchitecture analysis
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/SpectraCollab/ORMIR_2022
project_urls =
    Source Code = https://github.com/SpectraCollab/ORMIR_2022
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python
keywords =
    medical
    imaging

[entry_points]

[pbr]
skip_changelog = 1
skip_authors = 1
